fixed slider behind main logo

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body a{
 	-moz-transition: 0.5s all;
 	-o-transition: 0.5s all;
 }
+.hide {display: none;}
 .absolute-center {
   margin: auto;
   position: absolute;
@@ -32,6 +33,7 @@ body a{
     left: 0;
     right: 0;
     bottom: 0;
+    z-index: 999;
 }
 .header{
 	background:#000;
